feat: comprehensive test coverage, challenges, and documentation expansion
- Add 15 new challenges (CH-036 to CH-050): auth, security, latency, docs, resilience
- Add fuzz tests (14), contract tests (8), chaos tests (6), monitoring tests (34)
- Boost test coverage: services, handlers, database, filesystem, repository, metrics
- Fix PDF generation (media box), SQLite boolean literals, nested query deadlock
- Add frontend tests: collections, media, playlists, favorites, conversion tools
- Update documentation: architecture, ER diagrams, testing, security, concurrency
- Update .gitignore: coverage.html, .prof files; remove tracked coverage artifact

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>